[gd_scene load_steps=10 format=3]

[ext_resource type="Texture2D" uid="uid://byq6jymnhrxlp" path="res://Graphics/UI/Theme/PanelBack.png" id="1_446x0"]
[ext_resource type="Script" path="res://Objects/UI/Elements/GetBadge.gd" id="1_tbefa"]
[ext_resource type="FontFile" uid="uid://cg0kedwr3m5a6" path="res://Fonts/DialogueFontBold.tres" id="2_prm77"]
[ext_resource type="PackedScene" path="res://Objects/UI/Elements/BadgeUIButton.tscn" id="3_0gicn"]
[ext_resource type="Texture2D" uid="uid://cwv5v2wuddop0" path="res://Graphics/UI/Menus/BadgeUI/BadgeNone.png" id="4_mnetg"]
[ext_resource type="Texture2D" uid="uid://bmjk26cpqhdou" path="res://Graphics/UI/Menus/BadgeUI/BadgeCancel.png" id="5_jt447"]
[ext_resource type="FontFile" path="res://Fonts/DialogueFont.tres" id="6_djem4"]

[sub_resource type="LabelSettings" id="LabelSettings_7vesi"]
font = ExtResource("2_prm77")
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_wiwdp"]
font = ExtResource("6_djem4")
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="GetBadge" type="CanvasLayer"]
process_mode = 3
layer = 7
script = ExtResource("1_tbefa")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.498039)

[node name="OMargin" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 40

[node name="Background" type="NinePatchRect" parent="OMargin"]
offset_left = 80.0
offset_top = 40.0
offset_right = 400.0
offset_bottom = 230.0
texture = ExtResource("1_446x0")
region_rect = Rect2(0, 0, 24, 24)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="DescBack" type="ColorRect" parent="OMargin/Background"]
offset_left = 3.0
offset_top = 140.0
offset_right = 317.0
offset_bottom = 187.0
color = Color(0, 0, 0, 0.262745)

[node name="TitleBack" type="ColorRect" parent="OMargin/Background"]
offset_left = 3.0
offset_top = 3.0
offset_right = 317.0
offset_bottom = 31.0
color = Color(0, 0, 0, 0.262745)

[node name="IMargin" type="MarginContainer" parent="OMargin/Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBox" type="VBoxContainer" parent="OMargin/Background/IMargin"]
unique_name_in_owner = true
offset_left = 8.0
offset_top = 8.0
offset_right = 312.0
offset_bottom = 182.0

[node name="TopLabel" type="Label" parent="OMargin/Background/IMargin/VBox"]
offset_right = 304.0
offset_bottom = 19.0
text = "SELECT A PIN"
label_settings = SubResource("LabelSettings_7vesi")
horizontal_alignment = 1

[node name="Scroll" type="ScrollContainer" parent="OMargin/Background/IMargin/VBox"]
offset_top = 23.0
offset_right = 304.0
offset_bottom = 132.0
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 3

[node name="Grid" type="GridContainer" parent="OMargin/Background/IMargin/VBox/Scroll"]
offset_right = 304.0
offset_bottom = 40.0
size_flags_horizontal = 3
columns = 6

[node name="Cancel" parent="OMargin/Background/IMargin/VBox/Scroll/Grid" instance=ExtResource("3_0gicn")]
unique_name_in_owner = true
offset_right = 50.0
badge_id = "cancel"
desc = "Cancel selection"
badge_name = "No Change"
badge_icon = ExtResource("5_jt447")
choose_mode = true

[node name="NoBadge" parent="OMargin/Background/IMargin/VBox/Scroll/Grid" instance=ExtResource("3_0gicn")]
unique_name_in_owner = true
offset_left = 54.0
offset_right = 104.0
desc = "Unequip current pin"
badge_icon = ExtResource("4_mnetg")
choose_mode = true

[node name="DescLabel" type="Label" parent="OMargin/Background/IMargin/VBox"]
custom_minimum_size = Vector2(0, 38)
offset_top = 136.0
offset_right = 304.0
offset_bottom = 174.0
text = "Description Line 1
Description Line 2"
label_settings = SubResource("LabelSettings_wiwdp")
horizontal_alignment = 1
autowrap_mode = 2
